# prompt-registry

./: CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: design.md
examples/: basic_usage.py
examples/evals/: support_refund_request.yaml
prompts/support/: refund_request_v1.yaml  refund_request_v1_1.yaml
src/prompt_registry/: __init__.py  cli.py  evals.py  exceptions.py  io.py  models.py  registry.py  utils.py
tests/: test_evals.py  test_registry.py  test_rendering.py
